...
          'Different email provided compared to owner referral. Check your email to verify it then you can log in.\n'
              'Verification may take a few minutes to send.\n'
              'You may need to check spam email',
          [
            TextButton(
              key: const Key('successDialogOkButton'),
              child: const Text('OK'),
              onPressed: () {
                Navigator.of(context).pop();
                Navigator.pushReplacementNamed(context, '/login');
              },
            ),
          ],
...
              key: _formKey,
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.stretch,
                children: [
                  _buildFormField(
                      // REFERRAL CODE INPUT
                      key: const ValueKey("referralField"),
                      name: "referral",
                      label: 'Referral (Required)',
                      initialValue: code,
                      inputFormatters: [
                        LengthLimitingTextInputFormatter(6),
                        FilteringTextInputFormatter.allow(RegExp(r'[0-9]')),
                      ],
                      validator: FormBuilderValidators.compose([
...
                        FormBuilderValidators.maxLength(6,
                            errorText: "Referral code must be 6 integers"),
                      ]),
                      keyboardType: TextInputType.number),
                  // Email Field
                  _buildFormField(
                    key: const ValueKey('emailField'),
                    name: 'email',
                    label: 'Email (Required)',
                    initialValue: email,
                    inputFormatters: [
                      LengthLimitingTextInputFormatter(30),
                    ],
...
                          errorText: 'Please enter a valid email'),
                    ]),
                    keyboardType: TextInputType.emailAddress,
                  ),
                  // Password Field
                  _buildFormField(
                    key: const ValueKey('passwordField'),
                    name: 'password',
                    label: 'Password (Required)',
                    obscureText: true,
                    inputFormatters: [
                      LengthLimitingTextInputFormatter(20),
                    ],
...
                          errorText:
                              'Password must contain at least one lowercase character'),
                    ]),
                  ),
                  // First Name Field
                  _buildFormField(
                    key: const ValueKey('fNameField'),
                    name: 'fName',
                    label: 'First Name (Required)',
                    inputFormatters: [
                      LengthLimitingTextInputFormatter(20),
                    ],
                    validator: FormBuilderValidators.compose([
...
                          errorText:
                              'First name must be at most 20 characters'),
                    ]),
                  ),
                  // Last Name Field
                  _buildFormField(
                    key: const ValueKey('lNameField'),
                    name: 'lName',
                    label: 'Last Name (Required)',
                    inputFormatters: [
                      LengthLimitingTextInputFormatter(20),
                    ],
                    validator: FormBuilderValidators.compose([
...
                  if (_isLoading)
                    const Center(child: CircularProgressIndicator())
                  else
                    ElevatedButton(
                      key: const ValueKey('registerButton'),
                      onPressed: _register,
                      child: const Text('Register'),
                    ),
                  const SizedBox(height: 20),
                  // Register Button with Key

                  // Login link for users who are already registered
                  Align(
...
