...

  List<Widget> allowedTabs(final BuildContext context) {
    final List<Widget> allowedTabs = [
      ListTile(
        key: const Key('logout_btn'),
        leading: const Icon(Icons.exit_to_app, color: Colors.red),
        title: const Text('Logout',
            style: TextStyle(color: Colors.red, fontWeight: FontWeight.bold)),
        onTap: () {
          Provider.of<AuthController>(context, listen: false)
              .logout()
              .then((final _) {
            if (context.mounted) {
...
                        onTap: () {
                          Navigator.pushReplacementNamed(
                              context, RegistrationPage.RouteName);
                        },
                      ),
                      ListTile(
                        title: const Text('Login'),
                        onTap: () {
                          Navigator.pushReplacementNamed(
                              context, LoginPage.RouteName);
                        },
                      ),
                    ],
...
