...
                                      loginAsOwner = !loginAsOwner;
                                      forgotPasswordPressed = false;
                                    });
                                  },
                                  child: loginAsOwner
                                      ? const Text('Login as Therapist')
                                      : const Text('Login as Owner'))
                            ]),
                      ],
                    ),
                  ),
                ),
              ),
...
